tests/tipe-data.test.ts
describe('Data Type', function () {
    it('should must desclare', function () {
        let name: string = 'Muhammad Zuhair Hamzah';
        let balance: number = 10000;
        let isTrue: boolean = true;

        console.info(name);
        console.info(balance);
        console.info(isTrue);

        // name = 100; //error
        // number = "ok"; //error
        // isTrue = 100; //error
    })

})